src/styles/layout/pagescreen.scss
.pagescreen {
    display: block;
    min-height: calc(100vh - 60px);
    margin: auto;
    max-width: 1600px;
    padding: 50px 30px 25px;
    width: 100%;

    @media only screen and (min-width: 600px) {
        padding: 60px 60px 30px;
    }

    @media only screen and (min-width: 1024px) {
        padding: 80px 100px 40px;
    }

    @media only screen and (min-width: 1201px) {
    &--gradient {
        background: linear-gradient($dark-bg-colour--darker, $dark-bg-colour);
    }

    &--flex {
        align-items: center;
        display: flex;
        flex-direction: column;
        gap: 50px;

        @media only screen and (min-width: 1024px) {
            flex-direction: row;
        }
    }

    &--centred {
        justify-content: center;
    }

    &__content {
        margin: auto;
        text-align: center;
    }

    &__highlight-box {
        background-color: $dark-main-colour;
        border-radius: 10px;
        margin-bottom: 50px;
        padding: 30px;

        @media only screen and (min-width: 600px) {
            padding: 50px;
        }
    
        @media only screen and (min-width: 1024px) {
            padding: 80px;
        }
    }
}

